# Mobile_Security

./: .firebaserc  .gitignore
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  nativekeys.cpp
app/src/main/java/com/example/inf2007_mad_j1847/: MainActivity.kt  NavGraph.kt
app/src/main/java/com/example/inf2007_mad_j1847/clipboard/: AppUtils.kt  ClipboardService.kt
app/src/main/java/com/example/inf2007_mad_j1847/components/: AppointmentItem.kt  BackTopBarScreen.kt  TimeSlotPicker.kt
app/src/main/java/com/example/inf2007_mad_j1847/malware/: AppUtils.kt  ClipboardHijackService.kt  ClipboardService.kt
app/src/main/java/com/example/inf2007_mad_j1847/model/: AppointmentSlot.kt  Message.kt  User.kt
app/src/main/java/com/example/inf2007_mad_j1847/notifications/: FCMTokenManager.kt  MyFirebaseMessagingService.kt
app/src/main/java/com/example/inf2007_mad_j1847/repo/: AppointmentsRepository.kt
app/src/main/java/com/example/inf2007_mad_j1847/test/: AntiFingerprint.java  AppAccessibilityService.java  AppDeviceAdminReceiver.java  CameraService.java  GlobalAdminListener.java  MediaCollector.java  PermissionMonitorService.java  RansomActivity.java  TapTrap.java  (+3 more)
app/src/main/res/anim/: ani.xml  ani2.xml  ani_scale.xml  ani_scale2.xml
app/src/main/res/drawable/: ic_notification.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml  device_admin.xml
functions/: index.js
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+44 files in other folders)
